# polygon_clipper

./: CMakeLists.txt  README.md
demo/: main.cpp  main_difference.cpp  main_intersection.cpp  main_union.cpp  main_xor.cpp
src/: clipper.cpp  clipper.h  clipper_offset.cpp  clipper_offset.h  clipper_triangulation.cpp  clipper_triangulation.h  svg.cpp  svg.h
